// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dialog > should match snapshot 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Test-Dialog
            </h2>
          </article>
          <button
            aria-label="Close"
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.3137 10L10 21.3137"
                stroke="currentColor"
                stroke-width="1.75"
              />
              <path
                d="M10 10L21.3137 21.3137"
                stroke="currentColor"
                stroke-width="1.75"
              />
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`Dialog should match snapshot 1`] = `
<div
  class="portal"
  role="dialog"
>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="portal__frame accent-color__backlog-blue"
    >
      <div
        class="portal__content"
        role="dialog"
      >
        <aside
          class="dialog"
        >
          <article
            class="dialog__content"
          >
            <h2
              class="dialog__header-text"
            >
              Test-Dialog
            </h2>
          </article>
          <button
            aria-label="Close"
            class="dialog__close-button"
          >
            <svg
              class="dialog__close-icon"
            >
              close.svg
            </svg>
          </button>
        </aside>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
